# PartSegCore-compiled-backend

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  Readme.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: wheels.yml
build_utils/: build_libomp.sh
docs/: calc_bounds.rst  conf.py  fast_unique.rst  index.rst  napari_mapping.rst  sprawl_utils.rst
notebooks/: data_util.py  performance.ipynb  performance_label_unique.ipynb  performance_napari.ipynb
src/PartSegCore_compiled_backend/: __init__.py  _fast_unique.pyx  _napari_mapping.pyx  calc_bounds.pyi  calc_bounds.pyx  color_image_cython.pyi  color_image_cython.pyx  fast_unique.py  napari_mapping.py  triangulate.hpp  triangulate.pyx  utils.py  utils.pyi  utils.pyx
src/PartSegCore_compiled_backend/multiscale_opening/: __init__.py  mso.cpp  mso.h  mso_bind.pyi  mso_bind.pyx  my_queue.h
src/PartSegCore_compiled_backend/sprawl_utils/: euclidean_cython.pyi  euclidean_cython.pyx  find_split.py  find_split.pyi  global_consts.h  path_sprawl_cython.pyi  path_sprawl_cython.pyx  put_borders_in_queue.pyx  sprawl_utils.pyi  sprawl_utils.pyx
src/PartSegCore_compiled_backend/sprawl_utils/_test/: test_euclidean.py
src/PartSegCore_compiled_backend/triangulation/: debug_util.hpp  intersection.hpp  point.hpp  triangulate.hpp
src/tests/: test_calc_bounds.py  test_coloring.py  test_fast_unique.py  test_napari_mapping.py  test_triangulate.py  test_utils.py
src/tests/test_sprawl_utils/: test_euclidean.py
