[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=42.0.0", "wheel>=0.34.2", "Cython", "oldest-supported-numpy", "setuptools_scm[toml]>=3.4"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/PartSegCore_compiled_backend/version.py"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
  | src/PartSegCore_compiled_backend/version.py
)
'''

[tool.isort]
line_length=120
known_first_party=['PartSegCore_compiled_backend']
profile="black"
src_paths=["src"]


[tool.check-manifest]
ignore = ["src/PartSegCore_compiled_backend/changelog.py", "src/PartSegCore_compiled_backend/version.py"]


[tool.cibuildwheel]
test-command = "pytest {project}/src/tests"
test-extras = ["test"]
skip = "cp36-* cp37-* pp37-* pp*macos*"
build = "*64"
