[metadata]
name = PartSegCore_compiled_backend
description = PartSegCore compiled backend,
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://4dnucleome.cent.uw.edu.pl/PartSeg/
author = Grzegorz Bokota
author_email = g.bokota@cent.uw.edu.pl
license = BSD-3-Clause
license_files = License.txt
platforms = Linux, Windows, MacOs
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = bioimaging
project_urls =
    Documentation = https://partseg.readthedocs.io/en/stable/
    Source Code = https://github.com/4DNucleome/PartSegCore-compiled-backend

[options]
packages = find:
install_requires =
    numpy>=1.16.0
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    cython>=0.29.13
    setuptools-scm[toml]>=3.4
tests_require =
    pytest
    pytest-cov

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=3.0.0
    pytest-cov

[tool:pytest]
testpaths = src/tests

[coverage:paths]
source =
    src
    */site-packages

[coverage:run]
source =
    PartSegCore_compiled_backend
omit =
    .tox/*
    src/**/test*.py
parallel = True

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError

[flake8]
max-line-length = 120
ignore = E203,W503,C901
max-complexity = 18
exclude = build/**, .eggs/**
